@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'ch.nickl'
-version = '1.0-SNAPSHOT'
+version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
@@ -44,7 +44,12 @@ compileJava {
 
 test {
     useJUnitPlatform()
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
     testLogging {
         events "passed", "skipped", "failed"
     }
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
